--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Ping</title>
 </head>
 <body>
+
+    <!-- header -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid mx-5">
     <a class="navbar-brand" href="#">PING</a>
@@ -19,20 +21,20 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto align-items-center">
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Games
+              </a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Reviews</a></li>
+                  <li><a class="dropdown-item" href="#">G(old)</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">New</a></li>
+              </ul>
+          </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">News</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Games
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Reviews</a></li>
-                <li><a class="dropdown-item" href="#">G(old)</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">New</a></li>
-            </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"><i class="bi bi-person-circle roxo"></i></a>
@@ -41,5 +43,19 @@
     </div>
   </div>
 </nav>
+
+    <!-- main image -->
+    <div class="container d-flex my-5">
+        <div class="col-8" id="main-image-container"><a href="#"><img src="img/baldurs-gate-3.jpg" class="main-image"></a></div>
+        <div class="col-4" id="main-text-container">
+            <div class="m-5">
+                <a href="#" class="-main-text">Baldur's Gate 3<br>É o jogo destaque do mês de agosto.
+                </a>
+                <a href="#" class="-main-subtext pt-5">
+                    <p>Veja as impressões iniciais do aclamado RPG.</p>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
