--- a/index.html
+++ b/index.html
@@ -46,16 +46,22 @@
 
     <!-- main image -->
     <div class="container d-flex my-5">
-        <div class="col-8" id="main-image-container"><a href="#"><img src="img/baldurs-gate-3.jpg" class="main-image"></a></div>
-        <div class="col-4" id="main-text-container">
+        <div class="col-7" id="main-image-container"><a href="#"><img src="img/baldurs-gate-3.jpg" class="main-image"></a></div>
+        <div class="col-5" id="main-text-container">
             <div class="m-5">
                 <a href="#" class="-main-text">Baldur's Gate 3<br>É o jogo destaque do mês de agosto.
-                </a>
-                <a href="#" class="-main-subtext pt-5">
-                    <p>Veja as impressões iniciais do aclamado RPG.</p>
+                <br>
+                <span class="-main-subtext">
+                    Veja as impressões iniciais do aclamado RPG...
+                </span>
                 </a>
             </div>
         </div>
+    </div>
+
+    <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+      <button class="btn btn-primary me-md-2 px-5 py-3 bg-style" type="button"><a href="#">News</a></button>
+      <button class="btn btn-primary px-5 py-3 bg-style" type="button"><a href="#">G(old)</a></button>
     </div>
 </body>
 </html>
