--- a/index.html
+++ b/index.html
@@ -61,78 +61,165 @@
         </div>
     </div>
 
+    <!-- button -->
+
     <div class="d-grid gap-2 d-md-flex justify-content-md-center">
       <button class="btn btn-primary me-md-2 px-5 py-3 bg-style" type="button"><a href="#">News</a></button>
       <button class="btn btn-primary px-5 py-3 bg-style" type="button"><a href="#">G(old)</a></button>
     </div>
 
-    <div id="carouselExampleControls" class="carousel" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/images.jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Blasphemous II</h5>
-                <p class="card-text">25/08/23</p>
-              </div>
-          </div>
-        </div>
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/images (1).jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Sea of Stars</h5>
-                <p class="card-text">29/08/23</p>
-              </div>
-          </div>
-        </div>
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Starfield</h5>
-                <p class="card-text">06/09/23</p>
-              </div>
-          </div>
-        </div>
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Starfield</h5>
-                <p class="card-text">06/09/23</p>
-              </div>
-          </div>
-        </div>
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Starfield</h5>
-                <p class="card-text">06/09/23</p>
-              </div>
-          </div>
-        </div>
-        <div class="carousel-item active">
-          <div class="card">
-            <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg"  id="img-card"></div>
-              <div class="card-body">
-                <h5 class="card-title">Starfield</h5>
-                <p class="card-text">06/09/23</p>
-              </div>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+    <!--  -->
+    <div class="">
 
+      <h2 class="container" id="calendario">Calendário de lançamentos</h2>
+      <div id="carouselExampleControls" class="carousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="card">
+                    <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Sea of Stars</h5>
+                        <p class="card-text">28/08/23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Blasphemous II</h5>
+                        <p class="card-text">25/08/23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Starfield</h5>
+                        <p class="card-text">06/09/23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Sea of Stars</h5>
+                      <p class="card-text">28/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Blasphemous II</h5>
+                      <p class="card-text">25/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Starfield</h5>
+                      <p class="card-text">06/09/23</p>
+                  </div>
+              </div>
+          </div>
+            <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Sea of Stars</h5>
+                      <p class="card-text">28/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Blasphemous II</h5>
+                      <p class="card-text">25/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Starfield</h5>
+                      <p class="card-text">06/09/23</p>
+                  </div>
+              </div>
+          </div>
+            <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Sea of Stars</h5>
+                      <p class="card-text">28/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Blasphemous II</h5>
+                      <p class="card-text">25/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Starfield</h5>
+                      <p class="card-text">06/09/23</p>
+                  </div>
+              </div>
+          </div>
+            <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Sea of Stars</h5>
+                      <p class="card-text">28/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Blasphemous II</h5>
+                      <p class="card-text">25/08/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Starfield</h5>
+                      <p class="card-text">06/09/23</p>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
