--- a/Login.html
+++ b/Login.html
@@ -23,7 +23,7 @@
     <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #951e8a;">
 
         <div class="featured-image mb-3">
-            <img src="Imagens/4.jpg" class="img-fluid" style="width: 400px; margin-top: 20px; border-radius: 25px;">
+            <img src="img/4.jpg" class="img-fluid" style="width: 400px; margin-top: 20px; border-radius: 25px;">
         </div>
 
         <p class="text-white fs-2" style="font-family: 'Courier Nes', Courier, monospace; font-weight: 600;"></p>
@@ -58,7 +58,7 @@
                <button class="btn btn-lg btn-primary w-100 fs-6" style="background-color: #951e8a; border-color: black;" >Login</button> 
             </div>
             <div class="input-group mb-3">
-               <button class="btn btn-lg btn-light w-100 fs-6"><img src="Imagens/i606944.webp" style="width: 20px;" class="me-2"><small>Sign in with Google</small></button> 
+               <button class="btn btn-lg btn-light w-100 fs-6"><img src="img/i606944.webp" style="width: 20px;" class="me-2"><small>Sign in with Google</small></button> 
             </div>
             <div class="row">
                 <small>Não tem uma conta? <a href="#">Cadastrar-se</a></small>
