--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 
     <!-- main image -->
-    <div class="container d-flex my-5">
+    <div class="container d-flex my-5" id="main-container">
         <div class="col-7" id="main-image-container"><a href="#"><img src="img/baldurs-gate-3.jpg" class="main-image"></a></div>
         <div class="col-5" id="main-text-container">
             <div class="m-5">
@@ -76,19 +76,19 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="card">
-                    <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                    <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
                     <div class="card-body">
-                        <h5 class="card-title">Sea of Stars</h5>
-                        <p class="card-text">28/08/23</p>
+                        <h5 class="card-title">Blasphemous II</h5>
+                        <p class="card-text">25/08/23</p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                    <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
                     <div class="card-body">
-                        <h5 class="card-title">Blasphemous II</h5>
-                        <p class="card-text">25/08/23</p>
+                        <h5 class="card-title">Sea of Stars</h5>
+                        <p class="card-text">28/08/23</p>
                     </div>
                 </div>
             </div>
@@ -103,109 +103,118 @@
             </div>
             <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/nba2k.jpeg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Sea of Stars</h5>
-                      <p class="card-text">28/08/23</p>
+                      <h5 class="card-title">NBA 2K24</h5>
+                      <p class="card-text">08/09/23</p>
+                  </div>
+              </div>
+          </div>
+            <div class="carousel-item">
+                <div class="card">
+                  <div class="img-wrapper"><img src="img/mortal.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Mortal Kombat 1</h5>
+                      <p class="card-text">19/09/23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="img/liesofp.jpg" class="" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Lies of P</h5>
+                        <p class="card-text">19/09/23</p>
+                    </div>
+                </div>
+            </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/payday.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Payday 3</h5>
+                      <p class="card-text">21/09/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/assassins.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Blasphemous II</h5>
-                      <p class="card-text">25/08/23</p>
+                      <h5 class="card-title">Assassin's Creed Mirage</h5>
+                      <p class="card-text">12/10/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/Forza-Motorsport-capa-001.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Starfield</h5>
-                      <p class="card-text">06/09/23</p>
+                      <h5 class="card-title">Forza Motorsport</h5>
+                      <p class="card-text">10/10/23</p>
+                  </div>
+              </div>
+          </div>
+          <div class="carousel-item">
+              <div class="card">
+                  <div class="img-wrapper"><img src="img/alanwake.jpg" class="" alt="..."> </div>
+                  <div class="card-body">
+                      <h5 class="card-title">Alan Wake II</h5>
+                      <p class="card-text">17/10/23</p>
                   </div>
               </div>
           </div>
             <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/mario.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Sea of Stars</h5>
-                      <p class="card-text">28/08/23</p>
+                      <h5 class="card-title">Super Mario Bros. Wonder</h5>
+                      <p class="card-text">20/10/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/spiderman.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Blasphemous II</h5>
-                      <p class="card-text">25/08/23</p>
-                  </div>
-              </div>
-          </div>
-          <div class="carousel-item">
-              <div class="card">
-                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
-                  <div class="card-body">
-                      <h5 class="card-title">Starfield</h5>
-                      <p class="card-text">06/09/23</p>
+                      <h5 class="card-title">Marvel's Spider-Man 2</h5>
+                      <p class="card-text">20/10/23</p>
                   </div>
               </div>
           </div>
             <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/likeadragon.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Sea of Stars</h5>
-                      <p class="card-text">28/08/23</p>
+                      <h5 class="card-title">Like a Dragon Gaiden</h5>
+                      <p class="card-text">09/11/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/cod.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Blasphemous II</h5>
-                      <p class="card-text">25/08/23</p>
+                      <h5 class="card-title">Call of Duty: Modern Warfare 3</h5>
+                      <p class="card-text">10/11/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/persona-5-tactica-cover.cover_large.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Starfield</h5>
-                      <p class="card-text">06/09/23</p>
-                  </div>
-              </div>
-          </div>
-            <div class="carousel-item">
-              <div class="card">
-                  <div class="img-wrapper"><img src="img/images (1).jpg" class="" alt="..."> </div>
-                  <div class="card-body">
-                      <h5 class="card-title">Sea of Stars</h5>
-                      <p class="card-text">28/08/23</p>
+                      <h5 class="card-title">Persona 5 Tactica</h5>
+                      <p class="card-text">17/11/23</p>
                   </div>
               </div>
           </div>
           <div class="carousel-item">
               <div class="card">
-                  <div class="img-wrapper"><img src="img/images.jpg" class="" alt="..."> </div>
+                  <div class="img-wrapper"><img src="img/avatar.jpg" class="" alt="..."> </div>
                   <div class="card-body">
-                      <h5 class="card-title">Blasphemous II</h5>
-                      <p class="card-text">25/08/23</p>
-                  </div>
-              </div>
-          </div>
-          <div class="carousel-item">
-              <div class="card">
-                  <div class="img-wrapper"><img src="img/81fwGFBXWFL.jpg" class="" alt="..."> </div>
-                  <div class="card-body">
-                      <h5 class="card-title">Starfield</h5>
-                      <p class="card-text">06/09/23</p>
+                      <h5 class="card-title">Avatar: Frontiers of Pandora</h5>
+                      <p class="card-text">07/12/23</p>
                   </div>
               </div>
           </div>
@@ -218,6 +227,171 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
+        </div>
+    </div>
+
+
+    <div class="container" id="games-container">
+        <div class="col-12">
+            <h1>Reviews</h1>
+        </div>
+        <div class="row gx-md-5">
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6" id="section-reviews">
+                <div class="small-image-container center-image"><a href="#"><img src="img/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-container">
+                    <a href="#">
+                        <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
+                    </a>
+                <div class="row">
+                    <div class="col-12 text-truncate">
+                        Este texto é muito grande, infelizmente precisamos resumir para caber na páginaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.
+                    </div>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
 
